Support passing the exploded values by file path
If there's only 1 value in an explode_by field, it will be
considered a path to a file that contains all values in
separate lines. The path should be relative to the query
folder.

This still supports the old way of exploding by wiki.

Bug: T132481
Change-Id: I825347635acde51acab5bacfda46593512f94a18

--- a/test/fixtures/config/reportupdater_test4.yaml
+++ b/test/fixtures/config/reportupdater_test4.yaml
@@ -10,6 +10,6 @@ reports:
     reportupdater_test4:
         granularity: days
         starts: 2015-01-01
-        by_wiki: true
         explode_by:
+            wiki: ../wikis.txt
             editor: "visualeditor, wikitext"
