--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 # There is no setup.py
 skipsdist = True
-envlist = flake8, py35
+envlist = flake8, py35, py37
 
 [testenv:flake8]
 deps = flake8
